<resources>
    <string name="app_name" translatable="false">"Ez Control"</string>


    <!--commonly used string-->
    <string name="send">Send</string>
    <string name="ip_hint">Enter your IP here</string>
    <string name="port_hint">Enter your Port here</string>
    <string name="command_hint">Enter your command here</string>


    <string name="connect">Connect</string>
    <string name="skip">Skip</string>
    <string name="scan_wifi">Scan</string>
    <string name="ok">Ok</string>

    <string name="wait_for_scan_result">Please wait, Scanning for Wifi...</string>
    <string name="connection_loading_text">Please wait, While making connection...</string>
    <string name="wait_for_executing_command">Please wait, while executing command</string>

    <string name="connect_to_wrong_ssid">Wifi is not connected to selected router, Try again...</string>

    <string name="unable_connect_to_given_wifi">Unable to connect to %1$s , Try again</string>

    <string name="no_devices_found">No Devices found, Try again</string>
    <string name="select_password_entry_mode">How you want to enter the password</string>

    <string name="connect_to_device_wifi">Kindly provide password to %1$s to make connection</string>
    <string name="title_activity_splash_screen">SplashScreen</string>


    <string name="device_name">Device Name</string>
    <string name="add_device">Add Device</string>
    <string name="save">Save</string>

    <string name = "manual_entry">Enter password manually</string>
    <string name = "scan_password">Scan for password</string>
    <string name = "check_qrcode">You are scanning wrong QR code </string>
    <string name = "devices">Devices</string>
    <string name = "edit_device">Edit device</string>

    <string name = "no_router_info">You have not provided wifi info to connect, You want to provide ?</string>
    <string name = "station_mode_confirm_msg">Your wifi name is %1$s , password  is %2$s .
        Are you sure you want to connect to this Wifi router </string>
    <string name = "yes">Yes</string>
    <string name = "no">No</string>
    <string name = "no_exit">No, Exit</string>
    <string name = "change_password">Change Password</string>

    <string name = "settings">Settings</string>
    <string name = "help">Help</string>
    <string name = "connect_station_mode">Connect to Wifi Router</string>
    <string name = "scan_device">Scan Device</string>
    <string name = "clear_log">Clear Log</string>
    <string name = "enable_log">Enable Log</string>
    <string name = "disable_log">Disable Log</string>
    <string name = "text_command">Send Text</string>

    <string name = "find_device_ip">Please wait, Device finding is in progress</string>
    <string name = "wrong_router">You are connected to different router</string>

    <string name = "st_mode_fail">Station mode failed, Try again</string>
    <string name = "try_again">Try again</string>
    <string name = "exit_app">Exit app</string>
    <string name = "unable_to_find_device">Unable to find device</string>

    <string name = "different_router">You are connected to different router, make connection with %1$s</string>



</resources>
